k8s/server/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      serviceAccountName: server-ksa
      containers:
        - name: server
          image: server:0.0.1
          ports:
            - name: http-server
              containerPort: 8080
