k8s/server/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  labels:
    app: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http-server
      protocol: TCP
      port: 80
      targetPort: 8080
